# Chapter4

./: pyproject.toml
todolist/: db.sqlite3
todolist/todoapp/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
todolist/todoapp/migrations/: 0001_initial.py  0002_task_deadline_task_memo.py  0003_subtask.py  0004_subtask_parent_subtask.py  0005_remove_task_parent_task_delete_subtask.py  0006_subtask.py
todolist/todolist/: settings.py  urls.py
